Remove commons IO